syntax = "proto3";

package base;

import "buf/validate/validate.proto";

// ============================================
// 用户管理消息定义
// ============================================

// 用户状态枚举
enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_ACTIVE = 1;
  USER_STATUS_INACTIVE = 2;
  USER_STATUS_BANNED = 3;
}

// 用户详细信息（包含更多字段）
message UserDetail {
  // 用户ID
  string id = 1;
  // 用户名
  string username = 2;
  // 昵称
  string nickname = 3;
  // 头像URL
  string avatar = 4;
  // 邮箱
  string email = 5;
  // 手机号
  string phone = 6;
  // 用户状态
  UserStatus status = 7;
  // 角色列表
  repeated string roles = 8;
  // 创建时间
  string created_at = 9;
  // 更新时间
  string updated_at = 10;
  // 最后登录时间
  string last_login_at = 11;
}

// ============================================
// 用户列表
// ============================================

// 用户列表请求
message ListUsersRequest {
  // 页码，从 1 开始
  int32 page = 1 [(buf.validate.field).int32.gte = 1];
  // 每页数量
  int32 page_size = 2 [(buf.validate.field).int32 = {gte: 1, lte: 100}];
  // 搜索关键词（用户名、邮箱、昵称）
  string keyword = 3;
  // 状态筛选
  UserStatus status = 4;
  // 角色筛选
  string role = 5;
  // 排序字段
  string sort_by = 6;
  // 是否降序
  bool descending = 7;
}

// 用户列表响应
message ListUsersResponse {
  // 用户列表
  repeated UserDetail users = 1;
  // 总数
  int64 total = 2;
  // 当前页码
  int32 page = 3;
  // 每页数量
  int32 page_size = 4;
}

// ============================================
// 用户详情
// ============================================

// 获取用户详情请求
message GetUserRequest {
  // 用户ID
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

// 获取用户详情响应
message GetUserResponse {
  // 用户详情
  UserDetail user = 1;
}

// ============================================
// 创建用户
// ============================================

// 创建用户请求
message CreateUserRequest {
  // 用户名
  string username = 1 [(buf.validate.field).string = {min_len: 1, max_len: 50}];
  // 密码
  string password = 2 [(buf.validate.field).string = {min_len: 6, max_len: 128}];
  // 邮箱
  string email = 3 [(buf.validate.field).string.email = true];
  // 昵称
  string nickname = 4 [(buf.validate.field).string.max_len = 100];
  // 手机号
  string phone = 5;
  // 头像URL
  string avatar = 6;
  // 角色列表
  repeated string roles = 7;
  // 用户状态
  UserStatus status = 8;
}

// 创建用户响应
message CreateUserResponse {
  // 创建的用户
  UserDetail user = 1;
}

// ============================================
// 更新用户
// ============================================

// 更新用户请求
message UpdateUserRequest {
  // 用户ID
  string id = 1 [(buf.validate.field).string.min_len = 1];
  // 昵称
  optional string nickname = 2;
  // 邮箱
  optional string email = 3;
  // 手机号
  optional string phone = 4;
  // 头像URL
  optional string avatar = 5;
  // 角色列表
  repeated string roles = 6;
  // 用户状态
  optional UserStatus status = 7;
}

// 更新用户响应
message UpdateUserResponse {
  // 更新后的用户
  UserDetail user = 1;
}

// ============================================
// 删除用户
// ============================================

// 删除用户请求
message DeleteUserRequest {
  // 用户ID
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

// 删除用户响应
message DeleteUserResponse {
  // 是否成功
  bool success = 1;
}

// ============================================
// 重置密码
// ============================================

// 重置用户密码请求
message ResetUserPasswordRequest {
  // 用户ID
  string id = 1 [(buf.validate.field).string.min_len = 1];
  // 新密码
  string new_password = 2 [(buf.validate.field).string = {min_len: 6, max_len: 128}];
}

// 重置用户密码响应
message ResetUserPasswordResponse {
  // 是否成功
  bool success = 1;
}

// ============================================
// 批量操作
// ============================================

// 批量删除用户请求
message BatchDeleteUsersRequest {
  // 用户ID列表
  repeated string ids = 1 [(buf.validate.field).repeated.min_items = 1];
}

// 批量删除用户响应
message BatchDeleteUsersResponse {
  // 成功删除的数量
  int32 deleted_count = 1;
  // 失败的用户ID列表
  repeated string failed_ids = 2;
}

// 批量更新用户状态请求
message BatchUpdateUserStatusRequest {
  // 用户ID列表
  repeated string ids = 1 [(buf.validate.field).repeated.min_items = 1];
  // 新状态
  UserStatus status = 2;
}

// 批量更新用户状态响应
message BatchUpdateUserStatusResponse {
  // 成功更新的数量
  int32 updated_count = 1;
  // 失败的用户ID列表
  repeated string failed_ids = 2;
}

// ============================================
// 用户管理服务
// ============================================

service UserService {
  // 获取用户列表
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  // 获取用户详情
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  // 重置用户密码
  rpc ResetUserPassword(ResetUserPasswordRequest) returns (ResetUserPasswordResponse) {}
  // 批量删除用户
  rpc BatchDeleteUsers(BatchDeleteUsersRequest) returns (BatchDeleteUsersResponse) {}
  // 批量更新用户状态
  rpc BatchUpdateUserStatus(BatchUpdateUserStatusRequest) returns (BatchUpdateUserStatusResponse) {}
}
